# fmi-open-pv-forecast

./: .envrc  .gitignore  __testing.py  config.py  for_advanced_users.md  main.py  plotter.py  pyproject.toml  readme.md  ruff.toml  tasks.py
helpers/: _meps_data_loader.py  astronomical_calculations.py  irradiance_transpositions.py  output_estimator.py  panel_temperature_estimator.py  reflection_estimator.py  solar_irradiance_estimator.py
